# Hotel-Management-System

./: .gitignore  Bill.txt  CMakeLists.txt  Camera.h  Camera.txt  Classes.h  Client_profile.txt  Functions.h  Hotel_Manager.h  LICENSE  Profile.h  README.md  Reservation.h  Reservation.txt  Settings.h  Settings.txt  a.out  main  main.cpp  tempCodeRunnerFile.cpp
.github/workflows/: ci.yml
include/: Camera.h  Classes.h  Employee.h  Functions.h  Menus.h  Profile.h  Reservation.h  Settings.h
src/: .gitignore  Camera.cpp  Camera.h  PersistenceManager.cpp  RoomManager.cpp  main  main.cpp
tests/: RoomManagerTests.cpp  RoomTests.cpp
